--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/lvl1.lvl1
-EditorStartupMap=/Game/Levels/lvl1.lvl1
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BluePrints/GM_BASE.GM_BASE_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
